2019-07-11 Alibaba Cloud.
	* version: 2.0.4
	* BUG FIX: fix bug of batched oplog size exceeding 16MB, This bug was
	not completely resolved in version v1.4.6. see #122 and #187.
	* IMPROVE: add chinese comment in configuration.

2019-07-10 Alibaba Cloud.
	* version: 2.0.3
	* BUG FIX: update sentence incurs some fields lost.
	* BUG FIX: modify start.sh

2019-07-09 Alibaba Cloud.
	* version: 2.0.2
	* BUG FIX: DDL createIndexes fail. Using `applyOps` in DDL replay. see
	issue #176.
	* BUG FIX: DDL filter applyOps command panic.
	* IMPROVE: improve comparision script.
	* IMRPOVE: update vinllen/mgo library to solve the problem that using too
	many mgo connections.

2019-06-24 Alibaba Cloud.
	* version: 2.0.1
	* IMPROVE: add `mongo_connect_mode` in conf.
	* IMPROVE: support writing into different mongodb when source mongo is
	replica set.
	* BUG FIX: optimize namespace filter for DDL.

2019-06-19 Alibaba Cloud.
	* version: 2.0.0
	* Feature: support full synchronization.
	* Feature: support DDL synchronization including index and transaction.
	* Feature: support namespace rename.
	* BUG FIX: fix bug of dbref order.

2019-04-20 Alibaba Cloud.
	* version: 1.5.0-unstable
	* Feature: support full synchronization.
	* Feature: support DDL synchronization including index and transaction.

2019-04-12 Alibaba Cloud.
	* version: 1.4.6
	* BUG FIX: fix bug of batched oplog size exceeding 16MB.

2018-12-20 Alibaba Cloud.
	* version: 1.4.5
	* IMPROVE: modify `build.sh` to solve the problem of building error when
	download zip from github instead of `git clone`.
	* IMPROVE: modify error log level of `_id` type unknown.

2018-11-27 Alibaba Cloud.
	* version: 1.4.4
	* BUG FIX: enable bulk.Unordered when using bulk writer, so all the
	operations will be executed even some of them have failed. At the
	mean time, disable `replayer.executor.upsert` and
	`replayer.executor.insert_on_dup_update` by default.
	* IMPROVE: filter config database.