@@ -3,6 +3,10 @@
 	* BUG FIX: fix bug of batched oplog size exceeding 16MB, This bug was
 	not completely resolved in version v1.4.6. see #122 and #187.
 	* IMPROVE: add chinese comment in configuration.
+	* IMPROVE: print warning log when the oldest oplog is bigger than the
+	checkpoint timestamp, see #189.
+	* BUG FIX: use runCommand instead of applyOps to support sharding. see
+	#192.
 
 2019-07-10 Alibaba Cloud.
 	* version: 2.0.3
